--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon-16.ico" sizes="16x16" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon-32.ico" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>r4ndr4s4.me</title>
   </head>
   <body>
     <div id="root"></div>
