fix: preloading custom font to prevent flicker

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon-16.ico" sizes="16x16" />
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon-32.ico" sizes="32x32" />
+    <link rel="preload" href="/src/assets/Web437_IBM_VGA_8x14.woff" as="font" type="font/woff" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>r4ndr4s4.me</title>
   </head>
